<resources>
    <string name="app_name">BackgroundApp</string>
    <string name="paste_an_url">paste an url here</string>
    <string name="new_wallpaper">new wallpaper</string>
    <string name="confirm">Confirm</string>
    <string name="edit_the_picture">Edit the picture</string>
    <string name="label_brush">Brush</string>
    <string name="done">Done</string>
    <string name="rotation">Rotation</string>
    <string name="appearance">Appearance</string>
    <string name="brush">Brush</string>
    <string name="close">Close</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Do you want to exit without saving image ?</string>
    <string name="msg_save_image1">Do you want to save image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="forBackground">Use for background</string>
    <string name="gallery">🖼️</string>
    <string name="other">Other</string>
</resources>