<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etURL"
        />

    <jp.co.cyberagent.android.gpuimage.GPUImageView
        android:id="@+id/gpuimageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:gpuimage_show_loading="false"
        app:gpuimage_surface_type="texture_view"
        android:visibility="gone"/> <!-- surface_view or texture_view -->

<!--    <com.canhub.cropper.CropImageView-->
<!--        android:id="@+id/cropImageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/etURL"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        tools:visibility="visible"-->
<!--        android:visibility="gone"/>-->


    <EditText
        android:id="@+id/etURL"
        android:autofillHints=""
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/paste_an_url"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flButtons"
        android:layout_margin="20dp"
        tools:ignore="TextFields" />

    <FrameLayout
        android:id="@+id/flButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWallpaper"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:textColor="@color/yellow"
        android:text="@string/new_wallpaper" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/otherButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/flButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/edit_the_picture"
        app:layout_constraintTop_toBottomOf="@+id/flButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:visibility="gone"
        />
        <Button
            android:id="@+id/btnGallery"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:shadowRadius="50.0"
            android:textSize="20sp"
            android:text="@string/gallery"
            android:layout_margin="10dp"
            android:backgroundTint="@color/brown_color_picker"
            app:cornerRadius="0dp"
            />
        <Button
            android:id="@+id/btnNew"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:shadowRadius="50.0"
            android:textSize="12sp"
            android:text="@string/other"
            android:layout_margin="10dp"
            android:backgroundTint="@color/brown_color_picker"
            app:cornerRadius="0dp"
            android:visibility="gone"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>